fix(contextual-menu): menu is clipped in mobile safari

--- a/webapp/src/app/post-login-app/post-login-app.component.css
+++ b/webapp/src/app/post-login-app/post-login-app.component.css
@@ -3,9 +3,9 @@
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); You may not use
  * this file except in compliance with the License. A copy of the License is located at
- * 
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * or in the "license" file accompanying this file. This file is distributed on
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, express or
  * implied. See the License for the specific language governing permissions and
@@ -146,18 +146,12 @@
 
 .expanded-sidenav {
   width: 260px;
-  height: fit-content;
   border-right: 1px solid var(--border-200);
 }
 
 .collapsed-sidenav {
   width: 80px;
-  height: fit-content;
   border-right: 1px solid var(--border-200);
-}
-
-::ng-deep .mat-drawer-inner-container{
-  overflow: hidden !important;
 }
 
 .sidenav-expander {
